--- a/TaskMaster.Web/Pages/Project/GetProjects.cshtml
+++ b/TaskMaster.Web/Pages/Project/GetProjects.cshtml
@@ -65,9 +65,9 @@
                     {
                         <tr class="bg-primary">
                             <td>@item.Name</td>
-                            <td>@item.StartingDate!.Value.ToShortTimeString()</td>
+                            <td>@item.StartingDate!.Value.ToShortDateString()</td>
                             <td>@item.Duration day</td>
-                            <td>@item.EndingDate!.Value.ToShortTimeString()</td>
+                            <td>@item.EndingDate!.Value.ToShortDateString()</td>
                             <td>@item.Status</td>
                             <td>@item.StatusExplation</td>
                             <td>
@@ -83,9 +83,9 @@
                     {
                         <tr class="bg-danger">
                             <td>@item.Name</td>
-                            <td>@item.StartingDate!.Value.ToShortTimeString()</td>
+                            <td>@item.StartingDate!.Value.ToShortDateString()</td>
                             <td>@item.Duration day</td>
-                            <td>@item.EndingDate!.Value.ToShortTimeString()</td>
+                            <td>@item.EndingDate!.Value.ToShortDateString()</td>
                             <td>@item.Status</td>
                             <td>@item.StatusExplation</td>
                             <td>
