--- a/TaskMaster.Web/Pages/Project/GetProjectDetails.cshtml
+++ b/TaskMaster.Web/Pages/Project/GetProjectDetails.cshtml
@@ -30,4 +30,7 @@
                 </div>
             </div>
         </div>
+        <div class="col-8 offset-2 mt-3">
+            <a asp-page="/Project/GetProjects" class="btn btn-warning"><i class="fa-solid fa-rectangle-xmark text-black"></i><span> Back</span></a>
+        </div>
     </div>
