--- a/TaskMaster.Web/Pages/ProjectTask/GetProjectTasks.cshtml
+++ b/TaskMaster.Web/Pages/ProjectTask/GetProjectTasks.cshtml
@@ -86,9 +86,9 @@
                             <td>@item.TaskStatus</td>
                             <td>@item.StatusExplation</td>
                             <td>
-                                @*<a asp-page="/ProjectTask/UpdateTask" asp-route-id="@item.Id"><i class="fa-solid fa-pen-to-square text-black"></i></a>
-                                <a asp-page="/ProjectTask/DeleteTask" asp-route-id="@item.Id"><i class="fa-solid fa-trash text-black mx-1"></i></a>*@
-                                <a asp-page="/ProjectTask/GetTaskDetails" asp-route-id="@item.Id"><i class="fa-solid fa-circle-info text-black"></i></a>
+                                <a asp-page="/ProjectTask/UpdateTask" asp-route-id="@item.Id"><i class="fa-solid fa-pen-to-square text-black"></i></a>
+                                <a asp-page="/ProjectTask/DeleteTask" asp-route-id="@item.Id"><i class="fa-solid fa-trash text-black mx-1"></i></a>
+                                <a asp-page="/ProjectTask/GetTaskDetails" asp-route-id="@item.Id"><i class="fa-solid fa-circle-info text-black text-center"></i></a>
                             </td>
                         </tr>
                     }
@@ -114,8 +114,8 @@
                             <td>@item.TaskStatus</td>
                             <td>@item.StatusExplation</td>
                             <td>
-                                @*<a asp-page="/ProjectTask/UpdateTask" asp-route-id="@item.Id"><i class="fa-solid fa-pen-to-square text-black"></i></a>
-                                <a asp-page="/ProjectTask/DeleteTask" asp-route-id="@item.Id"><i class="fa-solid fa-trash text-black mx-1"></i></a>*@
+                                <a asp-page="/ProjectTask/UpdateTask" asp-route-id="@item.Id"><i class="fa-solid fa-pen-to-square text-black"></i></a>
+                                <a asp-page="/ProjectTask/DeleteTask" asp-route-id="@item.Id"><i class="fa-solid fa-trash text-black mx-1"></i></a>
                                 <a asp-page="/ProjectTask/GetTaskDetails" asp-route-id="@item.Id"><i class="fa-solid fa-circle-info text-black"></i></a>
                             </td>
                         </tr>
