--- a/TaskMaster.Web/Pages/ProjectTask/UpdateTask.cshtml
+++ b/TaskMaster.Web/Pages/ProjectTask/UpdateTask.cshtml
@@ -73,7 +73,7 @@
             <div class="col-8 offset-2 text-center mt-2">
                 <div class="col-8 form-group">
                     <button type="submit" class="btn btn-success btn-sm"><i class="fa-solid fa-floppy-disk"></i> Save</button>
-                    <button id="cancelButton" type="button" class="btn btn-warning btn-sm mx-3"><i class="fa-solid fa-rectangle-xmark"></i> Cancel</button>
+                    <a asp-page="/ProjectTask/GetProjectTasks" asp-route-id="@Model.ProjectId" class="btn btn-warning btn-sm mx-3"><i class="fa-solid fa-rectangle-xmark"></i><span> Back</span></a>
                 </div>
             </div>
         </form>
