--- a/TaskMaster.Web/Pages/Project/DeleteProject.cshtml
+++ b/TaskMaster.Web/Pages/Project/DeleteProject.cshtml
@@ -11,7 +11,7 @@
                 <form method="post">
                     <input type="hidden" asp-for="Id" />
                     <button type="submit" class="btn btn-success text-black btn-sm"><i class="fa-solid fa-circle-check text-black"></i><span> Delete</span></button>
-                    <a asp-page="/Project/GetProjects" class="btn btn-warning text-black btn-sm"><i class="fa-solid fa-rectangle-xmark text-black"></i><span> Back</span></a>
+                    <a asp-page="/Project/GetProjects" class="btn btn-warning text-black btn-sm"><i class="fa-solid fa-backward"></i></i><span> Back</span></a>
                 </form>
             </div>
         </div>
