--- a/TaskMaster.Web/Pages/Project/UpdateProject.cshtml
+++ b/TaskMaster.Web/Pages/Project/UpdateProject.cshtml
@@ -76,7 +76,7 @@
             <div class="col-8 offset-2 mt-2">
                 <div class="col-8 form-group">
                     <button type="submit" class="btn btn-success text-black btn-sm"><i class="fa-solid fa-floppy-disk text-black"></i><span> Save</span></button>
-                    <a asp-page="/Project/GetProjects" class="btn btn-warning btn-sm mx-1"><i class="fa-solid fa-rectangle-xmark text-black"></i><span> Back</span></a>
+                    <a asp-page="/Project/GetProjects" class="btn btn-warning btn-sm mx-1"><i class="fa-solid fa-backward"></i><span> Back</span></a>
                 </div>
             </div>
         </form>
