--- a/TaskMaster.Web/Pages/ProjectTask/GetProjectTasks.cshtml
+++ b/TaskMaster.Web/Pages/ProjectTask/GetProjectTasks.cshtml
@@ -45,7 +45,7 @@
             <div class="pull-right my-3 text-start">
                 <button class="btn btn-secondary btn-sm btn-filter"><span class="glyphicon glyphicon-filter"></span><i class="fa-solid fa-filter"></i></button>
                 <button id="createButton" class="btn btn-secondary btn-sm text-end mx-2"><span class="glyphicon glyphicon-filter"></span><i class="fa-solid fa-square-plus"></i></button>
-
+                <a class="btn btn-warning btn-sm text-black" asp-page="/Project/GetProjectDetails" asp-route-id="@Model.Id"><i class="fa-solid fa-backward"></i><span> Back</span></a>
             </div>
         </div>
         <table class="table table-bordered text-black">
