--- a/TaskMaster.Web/Pages/ProjectTask/GetProjectTasks.cshtml
+++ b/TaskMaster.Web/Pages/ProjectTask/GetProjectTasks.cshtml
@@ -1,6 +1,7 @@
 ﻿@page "project-tasks"
 @model TaskMaster.Web.Pages.ProjectTask.GetProjectTasksModel
 
+<link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" rel="stylesheet" />
 
 <style>
     .filterable {
@@ -38,92 +39,178 @@
 </style>
 
 
-<div class="row">
-    <div class="panel panel-primary filterable">
-        <div class="panel-heading">
-            <h3 class="panel-title text-center display-6">@Model.ProjectName's Tasks</h3>
-            <div class="pull-right my-3 text-start">
-                <button class="btn btn-secondary btn-sm btn-filter"><span class="glyphicon glyphicon-filter"></span><i class="fa-solid fa-filter"></i></button>
-                <button id="createButton" class="btn btn-secondary btn-sm text-end mx-2"><span class="glyphicon glyphicon-filter"></span><i class="fa-solid fa-square-plus"></i></button>
-                <a class="btn btn-warning btn-sm text-black" asp-page="/Project/GetProjectDetails" asp-route-id="@Model.Id"><i class="fa-solid fa-backward"></i><span> Back</span></a>
-            </div>
-        </div>
-        <table class="table table-bordered text-black">
-            <thead>
-                <tr class="filters bg-secondary">
-                    <th><input type="text" class="form-control" placeholder="Title" disabled></th>
-                    <th><input type="text" class="form-control" placeholder="Priority" disabled></th>
-                    <th><input type="text" class="form-control" placeholder="Starting" disabled></th>
-                    <th><input type="text" class="form-control" placeholder="Duration" disabled></th>
-                    <th><input type="text" class="form-control" placeholder="Ending" disabled></th>
-                    <th><input type="text" class="form-control" placeholder="Status" disabled></th>
-                    <th><input type="text" class="form-control" placeholder="Explation" disabled></th>
-                    <th>ACTIONS</th>
-                </tr>
-            </thead>
-            <tbody>
-                @foreach (var item in Model.Tasks)
-                {
-                    if (item.IsActive)
-                    {
-                        <tr class="bg-primary">
-                            <td>@item.Title</td>
-                            @if (item.PriorityLevel == "High")
-                            {
-                                <td class="bg-danger">@item.PriorityLevel</td>
-                            }
-                            else if (item.PriorityLevel == "Medium")
-                            {
-                                <td class="bg-danger">@item.PriorityLevel</td>
-                            }
-                            else
-                            {
-                                <td class="bg-success">@item.PriorityLevel</td>
-                            }
-                            <td>@item.StartingDate!.Value.ToShortDateString()</td>
-                            <td>@item.Duration day</td>
-                            <td>@item.EndingDate!.Value.ToShortDateString()</td>
-                            <td>@item.TaskStatus</td>
-                            <td>@item.StatusExplation</td>
-                            <td>
-                                <a asp-page="/ProjectTask/UpdateTask" asp-route-id="@item.Id"><i class="fa-solid fa-pen-to-square text-black"></i></a>
-                                <a asp-page="/ProjectTask/DeleteTask" asp-route-id="@item.Id"><i class="fa-solid fa-trash text-black mx-1"></i></a>
-                                <a asp-page="/ProjectTask/GetTaskDetails" asp-route-id="@item.Id"><i class="fa-solid fa-circle-info text-black text-center"></i></a>
-                            </td>
-                        </tr>
-                    }
-                    else
-                    {
-                        <tr class="bg-danger">
-                            <td>@item.Title</td>
-                            @if (item.PriorityLevel == "High")
-                            {
-                                <td class="bg-danger">@item.PriorityLevel</td>
-                            }
-                            else if (item.PriorityLevel == "Medium")
-                            {
-                                <td class="bg-danger">@item.PriorityLevel</td>
-                            }
-                            else
-                            {
-                                <td class="bg-success">@item.PriorityLevel</td>
-                            }
-                            <td>@item.StartingDate!.Value.ToShortTimeString()</td>
-                            <td>@item.Duration day</td>
-                            <td>@item.EndingDate!.Value.ToShortTimeString()</td>
-                            <td>@item.TaskStatus</td>
-                            <td>@item.StatusExplation</td>
-                            <td>
-                                <a asp-page="/ProjectTask/UpdateTask" asp-route-id="@item.Id"><i class="fa-solid fa-pen-to-square text-black"></i></a>
-                                <a asp-page="/ProjectTask/DeleteTask" asp-route-id="@item.Id"><i class="fa-solid fa-trash text-black mx-1"></i></a>
-                                <a asp-page="/ProjectTask/GetTaskDetails" asp-route-id="@item.Id"><i class="fa-solid fa-circle-info text-black"></i></a>
-                            </td>
-                        </tr>
-                    }
-                }
+<div class="row justify-content-start">
+    <div class="col-3">
+        <button id="createButton" class="btn btn-secondary btn-sm text-end mx-2"><span class="glyphicon glyphicon-filter"></span><i class="fa-solid fa-square-plus"></i></button>
+    </div>
+</div>
 
-            </tbody>
-        </table>
+
+<div class="row d-flex mx-1">
+    <div class="col">
+        <div class="text-center text-warning my-1 fw-bold">ToDo</div>
+        <hr />
+        
+        @foreach (var item in Model.Tasks)
+        {
+            <div class="card col my-2">
+                @if (item.TaskStatus == Core.Enums.ProjectTaskStatus.ToDo.ToString())
+                {
+
+                    <div class="card-body">
+                        <h5 class="card-title">@item.Title</h5>
+                        <h6 class="card-subtitle mb-2 text-muted">@item.Description</h6>
+
+                        @if (item.PriorityLevel == Core.Enums.PriorityLevel.High.ToString())
+                        {
+                            <span class="badge badge-pill badge-danger">@item.PriorityLevel</span>
+                        }
+                        else if (item.PriorityLevel == Core.Enums.PriorityLevel.Low.ToString())
+                        {
+                            <span class="badge badge-pill badge-primary">@item.PriorityLevel</span>
+                        }
+                        else
+                        {
+                            <span class="badge badge-pill badge-warning">@item.PriorityLevel</span>
+                        }
+
+                        <hr />
+                        <form method="post" asp-page-handler="Update">
+                            <input type="hidden" name="taskStatus" value="Progress" />
+                            <button type="submit" class="btn btn-primary btn-sm" asp-route-taskId="@item.Id" asp-page-handler="Update">
+                                 <i class="fa-solid fa-arrow-right"></i>
+                            </button>
+                        </form>
+
+                    </div>
+                }
+            </div>
+        }
+    </div>
+    <div class="col">
+        <div class="text-center text-primary bg-white my-1 fw-bold">Progress</div>
+        <hr />
+        @foreach (var item in Model.Tasks)
+        {
+            <div class="card col mt-1">
+                @if (item.TaskStatus == Core.Enums.ProjectTaskStatus.Progress.ToString())
+                {
+
+                    <div class="card-body">
+                        <h5 class="card-title">@item.Title</h5>
+                        <h6 class="card-subtitle mb-2 text-muted">@item.Description</h6>
+
+                        @if (item.PriorityLevel == Core.Enums.PriorityLevel.High.ToString())
+                        {
+                            <span class="badge badge-pill badge-danger">@item.PriorityLevel</span>
+                        }
+                        else if (item.PriorityLevel == Core.Enums.PriorityLevel.Low.ToString())
+                        {
+                            <span class="badge badge-pill badge-primary">@item.PriorityLevel</span>
+                        }
+                        else
+                        {
+                            <span class="badge badge-pill badge-warning">@item.PriorityLevel</span>
+                        }
+                        <hr />
+                        <form method="post" asp-page-handler="Update">
+                            <input type="hidden" name="taskStatus" value="ToDo" />
+                            <button type="submit" class="btn btn-warning btn-sm" asp-route-taskId="@item.Id" asp-page-handler="Update">
+                                <i class="fa-solid fa-arrow-left"></i>
+                            </button>
+                        </form>
+                        <form method="post" asp-page-handler="Update">
+                            <input type="hidden" name="taskStatus" value="Review" />
+                            <button type="submit" class="btn btn-danger btn-sm" asp-route-taskId="@item.Id" asp-page-handler="Update">
+                                <i class="fa-solid fa-arrow-right"></i>
+                            </button>
+                        </form>
+
+                    </div>
+                }
+            </div>
+        }
+    </div>
+    <div class="col">
+        <div class="text-center text-danger bg-white mt-1 fw-bold">Review</div>
+        <hr />
+        @foreach (var item in Model.Tasks)
+        {
+
+            <div class="card col">
+                @if (item.TaskStatus == Core.Enums.ProjectTaskStatus.Review.ToString())
+                {
+
+                    <div class="card-body">
+                        <h5 class="card-title">@item.Title</h5>
+                        <h6 class="card-subtitle mb-2 text-muted">@item.Description</h6>
+
+                        @if (item.PriorityLevel == Core.Enums.PriorityLevel.High.ToString())
+                        {
+                            <span class="badge badge-pill badge-danger">@item.PriorityLevel</span>
+                        }
+                        else if (item.PriorityLevel == Core.Enums.PriorityLevel.Low.ToString())
+                        {
+                            <span class="badge badge-pill badge-primary">@item.PriorityLevel</span>
+                        }
+                        else
+                        {
+                            <span class="badge badge-pill badge-warning">@item.PriorityLevel</span>
+                        }
+                        <hr />
+                        <form method="post" asp-page-handler="Update">
+                            <input type="hidden" name="taskStatus" value="Progress" />
+                            <button type="submit" class="btn btn-primary btn-sm" asp-route-taskId="@item.Id" asp-page-handler="Update">
+                                <i class="fa-solid fa-arrow-left"></i>
+                            </button>
+                        </form>
+                        <form method="post" asp-page-handler="Update">
+                            <input type="hidden" name="taskStatus" value="Done" />
+                            <button type="submit" class="btn btn-success btn-sm" asp-route-taskId="@item.Id" asp-page-handler="Update">
+                                <i class="fa-solid fa-arrow-right"></i>
+                            </button>
+                        </form>
+                    </div>
+                }
+            </div>
+        }
+    </div>
+    <div class="col">
+        <div class="text-center text-success bg-white mt-1 fw-bold">Done</div>
+        <hr />
+        @foreach (var item in Model.Tasks)
+        {
+            <div class="card col">
+                @if (item.TaskStatus == Core.Enums.ProjectTaskStatus.Done.ToString())
+                {
+
+                    <div class="card-body">
+                        <h5 class="card-title">@item.Title</h5>
+                        <h6 class="card-subtitle mb-2 text-muted">@item.Description</h6>
+
+                        @if (item.PriorityLevel == Core.Enums.PriorityLevel.High.ToString())
+                        {
+                            <span class="badge badge-pill badge-danger">@item.PriorityLevel</span>
+                        }
+                        else if (item.PriorityLevel == Core.Enums.PriorityLevel.Low.ToString())
+                        {
+                            <span class="badge badge-pill badge-primary">@item.PriorityLevel</span>
+                        }
+                        else
+                        {
+                            <span class="badge badge-pill badge-warning">@item.PriorityLevel</span>
+                        }
+                        <hr />
+                        <form method="post" asp-page-handler="Update">
+                            <input type="hidden" name="taskStatus" value="Review" />
+                            <button type="submit" class="btn btn-danger btn-sm" asp-route-taskId="@item.Id" asp-page-handler="Update">
+                                <i class="fa-solid fa-arrow-left"></i>
+                            </button>
+                        </form>
+                    </div>
+                }
+            </div>
+        }
     </div>
 </div>
 
